fix text overflow in terminal

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -296,13 +296,7 @@ table {
  }
 
  .clear{clear: both;}
- .terminal .body {
-     background: black;
-     color: #7AFB4C;
-     padding: 8px;
-     overflow: auto;
-     height: 100%;
- }
+
  .space {
      margin: 25px;
  }
